--- a/Result/Result.csproj
+++ b/Result/Result.csproj
@@ -19,6 +19,7 @@
     <IncludeSymbols>True</IncludeSymbols>
 	  <VersionPrefix>0.9.8</VersionPrefix>
 	  <VersionSuffix>rc.1</VersionSuffix>
+	  <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -37,6 +38,10 @@
 
   <ItemGroup>
     <None Include="..\..\..\..\OneDrive\Desktop\extensions.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\README.md">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
